--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -17,8 +17,10 @@ body{
 }
 .bground-color{
     color: floralwhite;
-    /*background-color: rgba(157, 163, 106, 0.4);*/
+    background-color: rgba(157, 163, 106, 0.4);
     text-align: center;    
    
 }
-
+.navbar{
+    margin-top: 0;
+}
