--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,6 +4,14 @@ header {
     margin: 0;
     
 }
+/*general reset*/
+body, h1, h4, ul, li, a {
+    margin: 0;
+    padding: 0;
+    list-style: none;
+    text-decoration: none;
+    color: inherit;
+}
 body{
     margin: 0;
     height: 100vh; /* Ensure the body spans the full viewport height */
@@ -13,8 +21,9 @@ body{
     background-size: cover;
     display: flex; /* Use flex to center or adjust child content if needed */
     flex-direction: column;
-      
+    font-family: 'Roboto', sans-serif;      
 }
+
 .bground-color{
     color: floralwhite;
     background-color: rgba(157, 163, 106, 0.4);
